--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img src="/assets/images/icon-complete.svg" alt="" />
           <p class="tks">Thank You!</p>
           <p>We've added your card details</p>
-          <button class="continue">Continue</button>
+          <button type="button"  class="continue">Continue</button>
         </div>
       </div>
     </main>
